修复积分应用列表多规格商品，显示价格区间

--- a/weapp/mall/templates/mall/editor/promotion/integral_sales.html
+++ b/weapp/mall/templates/mall/editor/promotion/integral_sales.html
@@ -109,7 +109,7 @@
 						</div>
 					</td>
 					<td>
-						${promotion.product.display_price}
+						${promotion.product.display_price_range}
 					</td>
 					<td>
 						${promotion.detail.discount}
