--- a/weapp/mall/templates/mall/editor/promotion/coupon_rules.html
+++ b/weapp/mall/templates/mall/editor/promotion/coupon_rules.html
@@ -93,18 +93,18 @@
 					&nbsp;-&nbsp;<a href="javascript:void(0);" class="xa-delete">删除</a>
 				{{/if}}
 				{{if promotion.status != '已结束' && promotion.status != '已失效'}}
-				<span class="xa-notFinishInfo">&nbsp;-&nbsp;
+				&nbsp;-&nbsp;
 				<a class="xa-copyLinkBtn" href="javascript:void(0);" data-url="/termite/workbench/jqm/preview/?module=market_tool:coupon&model=coupon&action=get&workspace_id=market_tool:coupon&webapp_owner_id=${ promotion.detail.owner_id }&project_id=0&rule_id=${promotion.detail.id}">链接</a>&nbsp;-&nbsp;
 				<a href="/mall2/coupon_rule/?id=${ promotion.id }">编辑</a>&nbsp;-&nbsp;
 				<a href="/mall2/coupon_rule/?id=${ promotion.id }&action=get">查看</a>
 				<br/>
-				<a href="javascript:void(0);" class="xa-finish">使失效</a></span>
+				<a href="javascript:void(0);" class="xa-finish">使失效</a>
 				{{/if}}
 				{{if promotion.status == '已结束' }} 
-					<p class="xui-greyColor xa-finishInfo">已过期</p>
+					<p class="xui-greyColor">已过期</p>
 				{{/if}}
 				{{if promotion.status == '已失效'}}
-					<p class="xui-greyColor xa-finishInfo">已失效</p>
+					<p class="xui-greyColor">已失效</p>
 				{{/if}}
 			</td>
 		</tr>
