--- a/weapp/mall/templates/mall/editor/promotion/promotions.html
+++ b/weapp/mall/templates/mall/editor/promotion/promotions.html
@@ -120,13 +120,7 @@
 						</div>
 						{{/each}}
 					</td>
-					<td>
-						{{if (promotion.status === '已结束')}}
-						已结束
-						{{else}}
-						<span class="xa-notFinishInfo">${promotion.status}</span><span class="xa-finishInfo xui-hide">已结束</span>
-						{{/if}}
-					</td>
+					<td>${promotion.status}</td>
 					<td>
 						{{each(j, product) promotion.products}}
 						<div class="xui-i-cell xui-i-cell-vcenter">
@@ -148,8 +142,7 @@
 						<a href="javascript:void(0);" class="xa-delete fl" style="width: 40px;text-decoration:none;">|&nbsp;&nbsp;&nbsp;删除</a>
 						{{else}}
 						<a target="_blank" href="/mall2/${promotion.type.name}/?id=${promotion.id}" class="fl" style="width: 40px;text-decoration:none;">详情</a>
-						<a href="javascript:void(0);" class="xa-notFinishInfo xa-finish fl" style="width: 40px;text-decoration:none;">|&nbsp;&nbsp;&nbsp;结束</a>
-						<a href="javascript:void(0);" class="xui-hide xa-finishInfo xa-delete fl" style="width: 40px;text-decoration:none;">|&nbsp;&nbsp;&nbsp;删除</a>
+						<a href="javascript:void(0);" class="xa-finish fl" style="width: 40px;text-decoration:none;">|&nbsp;&nbsp;&nbsp;结束</a>
 						{{/if}}
 					</td>
 				</tr>
