--- a/weapp/templates/content_base_v2.html
+++ b/weapp/templates/content_base_v2.html
@@ -307,7 +307,7 @@ $(document).ready(function($) {
 
 	//让这三个临时标签在新页面打开 duhao 20150512
 	$(".xa-navBar a[title='账号信息']").attr('target', '_blank');
-	$(".xa-navBar a[title='百宝箱']").attr('target', '_blank');
+{#	$(".xa-navBar a[title='百宝箱']").attr('target', '_blank');#}
 	$(".xa-navBar a[title='模板']").attr('target', '_blank');
 
 	//添加token参数
