--- a/weapp/apps/customerized_apps/vote/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/vote/templates/editor/workbench.html
@@ -10,7 +10,7 @@
       <li>您当前所在位置</li>
       <li><a href="/termite2/pages/">百宝箱</a></li>
       <li><a href="/apps/vote/votes/">微信投票</a></li>
-      <li class="active">新建投票</li>
+      <li class="active">新建</li>
     </ul>
   </div>
   
@@ -62,7 +62,7 @@
         "task": "weizoom-load-termite-components"
       }
     -->  
-  {{ '["appkit.page", "appkit.componentadder", "appkit.surveydescription", "appkit.qa", "appkit.selection", "appkit.shortcuts", "appkit.submitbutton"]'|load_termite_components|safe }}
+  {{ '["appkit.page", "appkit.componentadder", "appkit.surveydescription", "appkit.selection", "appkit.shortcuts", "appkit.submitbutton"]'|load_termite_components|safe }}
   <!-- *end_prunt_task* -->
   
   <script type="text/javascript">
@@ -118,7 +118,8 @@
           return '您对页面的编辑还没保存，请先保存页面'
         } else {
         }
-      })
+
+      });
       
       var pageManagerView = new W.workbench.PageManagerView({
         el: '#leftPanel',
