--- a/weapp/termite/static/termite_js/app/component/appkit/lotterydescription/lotterydescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/lotterydescription/lotterydescription.html
@@ -29,7 +29,7 @@
             <div class="xui-circle xa-circle xa-circle-unit-14"></div>
             <div class="xui-circle xa-circle xa-circle-unit-15"></div>
 
-            <table>
+            <table style="border-collapse: separate; border-spacing: 2px;">
                 <tr>
                     <td class="xui-lottery-unit xa-lottery-unit xa-lottery-unit-0 xa-lottery-first">
                         {% if component.components.0.model.image %}<img style='height:50px;width:50px;vertical-align:middle;' src="{{ component.components.0.model.image }}">{% else %}<b>一等奖</b>{% endif %}</td>
