--- a/weapp/static_v2/css/mall_order.css
+++ b/weapp/static_v2/css/mall_order.css
@@ -417,7 +417,9 @@
     overflow-y: scroll;
     padding-bottom: 15px;
 }
-
+.xui-commonOrderPayDialog .modal-footer{
+    line-height: normal;
+}
 .xui-commonOrderPayDialog table {
     width: 740px;
     margin: auto;
@@ -445,9 +447,9 @@
 }
 
 .xui-commonOrderPayDialog .wui-dialogbtn {
-    margin-top: 20px;
-    margin-right: 50px;
-    float: right;
+    position: absolute;
+    right:50px;
+    top:23px;
 }
 
 .xui-commonOrderPayDialog .modal-footer {
@@ -465,6 +467,7 @@
 .xui-commonOrderPayDialog .modal-footer .xui-innerwrap {
     float: left;
     margin-left: 27px;
+    text-align: left;
 }
 
 .xui-commonOrderPayDialog .xui-input-postage,.xui-commonOrderPayDialog .xui-input-final_price {
