--- a/weapp/apps/customerized_apps/vote/templates/webapp/result_vote.html
+++ b/weapp/apps/customerized_apps/vote/templates/webapp/result_vote.html
@@ -97,8 +97,7 @@
                 <a class="xui-btn xui-btn-primary xa-submitTermite" style="" href="javascript:void(0);" data-role="button">个人中心</a>
             </div>
         {% else %}
-            <div style="clear: both"></div>
-            <div style="clear: both"></div>
+            <div style="min-height: 25px;"></div>
         {% endif %}
     </div>
 {% endblock %}
