--- a/weapp/termite/static/v3/css/widget.css
+++ b/weapp/termite/static/v3/css/widget.css
@@ -204,9 +204,9 @@ ul{
     float: right;
     margin-left: 5px;
 }
-.xui-shoppingCartPage .wui-limit{
+/*.xui-shoppingCartPage .wui-limit{
     margin-right: 5px;
-}
+}*/
 .wui-counter span{
     text-align: center;
 }
