--- a/weapp/apps/customerized_apps/feedback/templates/webapp/m_feedback.html
+++ b/weapp/apps/customerized_apps/feedback/templates/webapp/m_feedback.html
@@ -33,7 +33,7 @@
 		color: #8F8F8F;
 	}
 	.wui-select{
-		margin: 20px 0;
+		padding: 20px 0;
 	}
 	#freedback_type{
 		background: #fff none repeat scroll 0 0;
@@ -51,16 +51,20 @@
 		white-space: nowrap;
 		color: #000;
 	}
-	.arrow_down{
+	#icon{
 		background: #fff url('/static_v2/img/arrow.png') no-repeat;
+		background-size: 23px 15px;
+	}
+	.arrow_down{
+
 		height: 20px;
 		position: absolute;
 		right: 20px;
 		top: 15px;
 		width: 34px;
+
 	}
 	.arrow_up{
-		background: #fff url('/static_v2/img/arrow.png') no-repeat;
 		height: 20px;
 		position: absolute;
 		right: 20px;
@@ -112,7 +116,7 @@
 						反馈类型
 						<span class="type_name" style="color: #666;margin-left: 10px;"></span>
 						<input class="wui-i-input" id="xui-input-type" type="text"   placeholder="" value="" data-validate="require-notempty::请选择反馈类型" readonly>
-						<span id="icon" class="arrow_down"></span>
+						<span id="icon" class=" arrow_down"></span>
 					</a>
 					<div class="xui-dropmenu" style="display: none">
 						<ul class="ui-dropmenu-items xa-select-type" style="-webkit-tap-highlight-color: rgba(255, 255, 255, 0);">
@@ -138,8 +142,7 @@
 							  data-min-length="20"
 							  data-max-length="200"
 							  maxlength="200"
-							  onkeydown='countChar("freedback_textarea","freedback_textarea_num");'
-							  onkeyup='countChar("freedback_textarea","freedback_textarea_num");'
+							  oninput='countChar("freedback_textarea","freedback_textarea_num");'
 							></textarea>
 				</div>
 			</div>
