[update]购物车--失效商品缩略图最小高度

--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/shopping_cart.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/shopping_cart.html
@@ -270,7 +270,7 @@
                     <div class="disTc pt15 pb15 xui-divLine pr">
                         <div class="xui-selectedProductList clearfix disT" style="width:100%;">
                             <div class="xui-selectedProductList-productImg disTc tc">
-                                <div class="pr">
+                                <div class="pr" style="height:75px;">
                                     <img src="{{product.order_thumbnails_url}}" />
                                 </div>
                             </div>
