BUG 4286 【添加优惠券】-保存按钮没有做限制，可以重复提交

--- a/weapp/mall/templates/mall/editor/promotion/create_coupon_rule.html
+++ b/weapp/mall/templates/mall/editor/promotion/create_coupon_rule.html
@@ -392,6 +392,7 @@ $(function(){
     if (!W.validate()) {
       return false;
     }
+    $(event.currentTarget).bottonLoading({status: 'show'});
     var args = $('.xa-form').serializeObject();
     W.getApi().call({
       method: 'post',
