修复【添加优惠券库存】-重复提交

--- a/weapp/mall/templates/mall/editor/promotion/create_coupon.html
+++ b/weapp/mall/templates/mall/editor/promotion/create_coupon.html
@@ -69,6 +69,7 @@ $(function(){
     if(!W.validate()) {
       return false;
     }
+    $(event.currentTarget).bottonLoading({status: 'show'});
     var args = $('.xa-form').serializeObject();
     // args.products = productSelector.getData();
     W.getApi().call({
