微信头像固定大小

--- a/weapp/apps/customerized_apps/feedback/templates/editor/feedbacks.html
+++ b/weapp/apps/customerized_apps/feedback/templates/editor/feedbacks.html
@@ -1,5 +1,12 @@
 {% extends "content_base_v2.html" %}
-
+{% block css %}
+    <style>
+    .tl.pl25 img{
+    	height: 60px;
+    	width: 60px;
+    }
+    </style>
+{% endblock %}
 {% block content-panel %}
 <div class="xui-feedbacksAppPage xui-appPage-commonStyle">
 	<div class="relative">
