活动客户端跑位

--- a/weapp/apps/customerized_apps/event/templates/webapp/is_already_participanted.html
+++ b/weapp/apps/customerized_apps/event/templates/webapp/is_already_participanted.html
@@ -7,6 +7,9 @@
         line-height: 35px;
         float: left;
     }
+    .wui-i-prize {
+        float: left;
+    }
     .wui-i-isParticipanted{
         float: right;
         line-height: 35px;
