--- a/weapp/termite/static/v4/css/app_widget.css
+++ b/weapp/termite/static/v4/css/app_widget.css
@@ -54,14 +54,17 @@
 .wui-appParticipantResult-Cover .wui-i-background {
 	background-color: #FFF;
 	width: 75%;
-	margin: 0px auto;
-	margin-top: 30%;
+	/*margin: 0px auto;*/
+	/*margin-top: 30%;*/
 	-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
 	border-radius: 3px;
-	position: relative;
+	position: fixed;
 	padding-top: 8%;
 	padding-bottom: 5%;
+	top: 10%;
+	left: 12%;
+
 }
 .wui-appParticipantResult-Cover .wui-i-successIcon {
 	border: 5px solid #59c969;
