--- a/weapp/templates/webapp_content_base.html
+++ b/weapp/templates/webapp_content_base.html
@@ -19,6 +19,7 @@
         <link type="text/css" rel="stylesheet" href="/termite_static/v3/css/widget.css">
         <link type="text/css" rel="stylesheet" href="/termite_static/css/common_widget.css">
         <link type="text/css" rel="stylesheet" href="/termite_static/v3/css/idangerous.swiper.css">
+	    <link type="text/css" rel="stylesheet" media="all" href="/static_v2/css/emojilc6cc2.css">
         <!-- *finish develop css* [do not modify and delete this line, it will be needed by dist process] -->
         {% else %}
         <link type="text/css" rel="stylesheet" media="all" href="{{cdn_host}}/standard_static/css/webapp_content_base_all.css">
