解决 Scenario: 3 在查询"活动名称"结果中删除分享红包 所对应的页面bug

--- a/weapp/mall/templates/mall/editor/red_envelope_rules.html
+++ b/weapp/mall/templates/mall/editor/red_envelope_rules.html
@@ -173,7 +173,8 @@ $(document).ready(function() {
                 status: 'delete'
             },
             success: function() {
-                view.table.reload();
+                //view.table.reload();
+                view.onClickSearchButton();
                 W.showHint('success', '删除成功！');
             },
             error: function() {
