--- a/weapp/webapp/modules/user_center/templates/user_center/editor/user_center.html
+++ b/weapp/webapp/modules/user_center/templates/user_center/editor/user_center.html
@@ -299,7 +299,7 @@
 
 						<div class="column_block">
 							<div>
-							<a href="/member/member_detail/edit/?id=${ member.id }" style="display:block;width:80px;">{{html member.username}}</a>
+							<a href="/member/member_detail/edit/?id=${ member.id }" style="display:block;width:80px;">{{html member.username_for_html}}</a>
 							</div>
 
 							<div>
