--- a/weapp/webapp/modules/user_center/templates/webapp/default_v3/refueling_page.html
+++ b/weapp/webapp/modules/user_center/templates/webapp/default_v3/refueling_page.html
@@ -402,7 +402,7 @@ body .wui-alert{
 				{% endif %}
 				<li class="xa-success-refueling hidden">
 					<img src="{{member.user_icon}}" alt="" class="xui-avatar">
-					<p class="xui-ellipsis-1">{{ member.username | safe}}</p>
+					<p class="xui-ellipsis-1">{{ member.username_for_html | safe}}</p>
 				</li>
 			</ul>
 		</div>
