--- a/weapp/weixin2/templates/weixin/advance_manage/channel_qrcode_member.html
+++ b/weapp/weixin2/templates/weixin/advance_manage/channel_qrcode_member.html
@@ -125,7 +125,7 @@
                 </div>
                 <div class="fl xui-i-fansName">
                     <a class='lh26 xui-i-link' href="/member/member_detail/edit/?id=${ member.id }" target='_blank'>
-                        {{html member.username}}
+                        {{html member.username_for_html}}
                         {{if member.name !== ''}}
                             (${member.name})
                         {{/if}}
