--- a/weapp/apps/customerized_apps/lottery/templates/webapp/m_lottery.html
+++ b/weapp/apps/customerized_apps/lottery/templates/webapp/m_lottery.html
@@ -66,6 +66,7 @@
             this.index++;
             if(this.index>this.count){
                 this.index = 0;
+                this.times ++;
             }
             $lottery.find(".xa-lottery-unit-"+this.index).addClass("active");
             //lights
@@ -79,23 +80,24 @@
             this.light_index = light_index;
         };
         Roulette.prototype.stop = function(index){
-            this.prize = index+1;
+            this.prize = parseInt(index);
         };
         Roulette.prototype.roll = function(){
             this.isRolling = true;
             this.move();
-            if(this.prize == -1){
+            if(this.prize == -1 || this.times<3){
                 if(this.speed > 50) this.speed -= 10;
-
             }else{
-                this.speed += 20;
-                if(this.speed >= 500 && ((this.prize == 0 && this.index == 7) || this.prize == this.index+1)){
+                console.log('prize:'+this.prize+' index:'+this.index);
+                if(this.speed >= 500 && ((this.prize == 0 && this.index == 7) || this.prize == this.index)){
                     clearTimeout(this.timer);
+                    this.times = 0;
                     this.prize = -1;
                     this.speed = 100;
                     this.isRolling = false;
                     return;
                 }
+                this.speed += 20;
             }
             var that = this;
             this.timer = setTimeout(function(){
@@ -105,10 +107,10 @@
     </script>
     <script type="text/javascript">
         var PRIZE = {
-            '0': getRandomStopPosition(['1', '5', '8', '10']), //谢谢参与位置
-            '1': getRandomStopPosition(['1', '7']), //一等奖位置
-            '2': getRandomStopPosition(['2', '4', '9']), //二等奖位置
-            '3': getRandomStopPosition(['3', '6', '11']) //三等奖位置
+            '谢谢参与': getRandomStopPosition(['1', '5', '8', '10']), //谢谢参与位置
+            '一等奖': getRandomStopPosition(['1', '7']), //一等奖位置
+            '二等奖': getRandomStopPosition(['2', '4', '9']), //二等奖位置
+            '三等奖': getRandomStopPosition(['3', '6', '11']) //三等奖位置
         };
         function getRandomStopPosition(arr){
             var len = arr.length - 1;
@@ -121,12 +123,10 @@
             var $container = $('.wui-lotterydescription').find('.wui-i-body');
             window.lottery = new Roulette($container);
             $(".xa-lottery-go").click(function(){
-                console.log(lottery.isRolling);
                 if(lottery.isRolling){
                     return false;
                 }else{
                     lottery.roll();
-                    alert(W.webappOwnerId);
                     W.getApi().call({
                         app: 'm/apps/lottery',
                         resource: 'lottery_prize',
@@ -136,6 +136,7 @@
                             webapp_owner_id: W.webappOwnerId
                         },
                         success: function(data){
+                            console.log(PRIZE[data.index]);
                             lottery.stop(PRIZE[data.index]);
                             console.log('抽奖结束');
                         },
