--- a/weapp/apps/customerized_apps/vote/templates/editor/votes.html
+++ b/weapp/apps/customerized_apps/vote/templates/editor/votes.html
@@ -61,6 +61,18 @@
 				</div>
 			</div>
 		</div>
+		<div class="xui-form disT">
+			<div class="xui-col disTc">
+				<div class="xui-i-item">
+					<label>奖项类型：</label>
+					<select class="" id="prize_type" name="prize_type">
+						<option value="all">所有奖品</option>
+						<option value="coupon">优惠券</option>
+						<option value="integral">积分</option>
+					</select>
+				</div>
+			</div>
+		</div>
 		<div class="xui-btn-group">
 			<a class="btn btn-primary mr40 xa-search xui-fontBold" href="javascript:void(0);">查&nbsp;&nbsp;&nbsp;询</a>
 {#			<a class="btn btn-default xa-reset xui-fontBold" href="javascript:void(0);">重&nbsp;&nbsp;&nbsp;置</a>#}
